其实才学完了课程中真实的两天的量...

--- a/C#学习日记/Day3_基础语法之注释和变量___2022-07-17_22-30.md
+++ b/C#学习日记/Day3_基础语法之注释和变量___2022-07-17_22-30.md
@@ -59,6 +59,7 @@ int n=100;//简写
 |变量类型|中文名|存储事例|
 |:-:|:-:|:-:|
 |int|整数|int number=100;|
+|long|长整形|float f=4.667788f|
 |double|小数|double s=3.14;  double d=3d;|
 |float|浮点小数|float f=4.667788f|
 |string|字符串|string name="";|
@@ -66,6 +67,8 @@ int n=100;//简写
 |decimal|货币数据|decimal money = 250m;|
 - **注意:** int类型最大区间是\[\-2\^31\ , 2\^31\]  
   约为21亿
+- long的整数范围是$[-2^{32}, 2^{32}-1]$
+  与int一样只占4个字节, 与int兼容
 - double类型则是$[\pm5.0\times10^{-324},\pm1.7\times10^{308}]$  
   精确程度15-16位
 - float类型为$[-10^{38},10^{38}]$  
