书写中还得注意大小写!

--- a/C#学习日记/Day7_if结构___2022-07-22_16-35.md
+++ b/C#学习日记/Day7_if结构___2022-07-22_16-35.md
@@ -14,8 +14,8 @@
 
 ## 判断闰年小练习
 ```
-Console.WriteLIne("请输入要判断的年份");
-int year = Convert.ToInt32(Console.readLine());
+Console.WriteLine("请输入要判断的年份");
+int year = Convert.ToInt32(Console.ReadLine());
 //闰年的两个条件:
 //1. 能被400整除
 //2. 能被4整除, 但不能被100整除
