--- a/C#学习日记/Day8_异常捕获_switch-case结构___2022-07-23_22-42.md
+++ b/C#学习日记/Day8_异常捕获_switch-case结构___2022-07-23_22-42.md
@@ -61,3 +61,103 @@ switch(变量或表达式的 值)
   7. 如果没有, 无事发生
 
 - **注意:** *case后面的值* 和 *switch的变量* 的**类型要一致**
+
+## 练习
+- 题目1: >=90 A档; [80,90) B档; ...<60E档; 用switch-case做
+
+```
+Console.WriteLine("请输入考试成绩(100以内的正整数)");
+int score = Convert.ToInt32(Console.ReadLine());
+switch (score / 10)
+{
+    case 10:
+    case 9:
+        Console.WriteLine("A");
+        break;
+    case 8:
+        Console.WriteLine("B");
+        break;
+    case 7:
+        Console.WriteLine("C");
+        break;
+    case 6:
+        Console.WriteLine("D");
+        break;
+    default:
+        Console.WriteLine("E");
+        break;
+}
+Console.ReadKey();
+```
+> **注意:** case 10和case 9后的代码**完全一样**, 因此可以简写
+
+- 题目2: 请用户输入年份 和 月份, 输出该月的天数(结合闰年)
+
+```
+//接收
+Console.WriteLine("请输入一个年份");
+try
+{
+    int year = Convert.ToInt32(Console.ReadLine());
+    Console.WriteLine("请输入一个月份");
+    try
+    {
+        int month = Convert.ToInt32(Console.ReadLine());// 可能性 1-12
+
+        //声明变量
+        int day = 0;
+
+        if (month >= 1 && month <= 12)
+        {
+
+            switch (month)
+            {
+                case 1:
+                case 3:
+                case 5:
+                case 7:
+                case 8:
+                case 10:
+                case 12:
+                    day = 31;
+                    break;
+                case 2:
+                    //有平年闰年之分
+                    bool b = (year % 400 == 0) || (year % 4 == 0 && year % 100 != 0);
+                    if (b)
+                    {
+                        day = 29;
+                    }
+                    else
+                    {
+                        day = 28;
+                    }
+                    break;
+                default:
+                    day = 30;
+                    break;
+            } //switch的括号
+
+            Console.WriteLine("{0}年{1}月有{2}天", year, month, day);
+        } //if判断的括号
+        else
+        {
+            Console.WriteLine("输入月份不符合要求, 程序退出");
+        }
+    } //try月份的括号
+    catch //和月份的try配对
+    {
+        Console.WriteLine("输入月份有误, 程序退出");
+    }
+
+} //try年份的括号
+catch //和年份的try配对
+{
+    Console.WriteLine("输入的年份有误, 程序退出");
+}
+Console.ReadKey();
+```
+> **总结&反思**  
+> 写代码的时候切忌: **不要边写边想异常**, 这样只会乱套  
+> 全篇写完, 正常功能运行成功, 再回头做异常处理  
+> 全局考虑异常
