补充练习题

--- a/C#学习日记/Day9_while和break___2022-07-24_21-10.md
+++ b/C#学习日记/Day9_while和break___2022-07-24_21-10.md
@@ -103,3 +103,54 @@ Console.ReadKey();
 ```
 > **注意:**做题时, 先分析出来所需要的变量, **提前声明**, 免得作用域出错  
 > 注: 以上代码是自己写的
+
+- 练习2: 老师问:"这道题你会做了吗?" 回答y, 就放学; 回答n, 就再讲一遍, 再问一遍.  
+  + 一直到学生回答y才放学
+  + 直到学生会or讲了5遍还不会, 都要放学
+
+```
+//循环体: 老师提问, 学生回答, 老师讲题
+//循环的两个条件: 学生不会 且 讲的次数小于5遍
+
+string answer = "";
+int i = 0;
+
+while (answer != "y" && i < 10)
+{
+    Console.WriteLine("这是我第{0}遍给你讲题, 你会了么?(y/n)", ++i);
+    answer = Console.ReadLine();
+
+    //如果回答是 就跳出循环
+    if (answer == "y")
+    {
+        Console.WriteLine("会了就放学吧!");
+        break;
+    }
+    else if (i == 5)    //第五次还不会就放学
+    {
+        Console.WriteLine("讲了5遍还不会也没必要讲了, 还是放学吧!");
+        break;
+    }
+}
+
+Console.ReadKey(); 
+```
+> 暂时不考虑非常严谨的异常处理
+
+## 练习3: 2006年 学员80000人, 每年增长25%, 问哪一年人数达到20万人?
+```
+//循环体: 人数每年增长25%
+//循环条件: 人数<20万
+
+double people = 80000;
+int year = 2006;
+while (people < 200000)
+{
+    people *= 1.25;
+    year++;
+}
+Console.WriteLine("到{0}年时, 人数达到20w", year);
+Console.ReadKey(); 
+```
+> 简单数学, 所以数学功底要扎实
+
