加一个do-while结构

--- a/C#学习日记/Day9_while和break___2022-07-24_21-10.md
+++ b/C#学习日记/Day9_while和break___2022-07-24_21-10.md
@@ -8,7 +8,8 @@
 ## 主要内容
 - 循环结构 while
 - 关键字 break
-- 练习
+- 练习*3
+- do-while 结构
 - - -
 
 ## 循环结构 while
@@ -137,7 +138,7 @@ Console.ReadKey();
 ```
 > 暂时不考虑非常严谨的异常处理
 
-## 练习3: 2006年 学员80000人, 每年增长25%, 问哪一年人数达到20万人?
+- 练习3: 2006年 学员80000人, 每年增长25%, 问哪一年人数达到20万人?
 ```
 //循环体: 人数每年增长25%
 //循环条件: 人数<20万
@@ -153,4 +154,22 @@ Console.WriteLine("到{0}年时, 人数达到20w", year);
 Console.ReadKey(); 
 ```
 > 简单数学, 所以数学功底要扎实
+---
+## ***do-while*** 结构
+- **语法:**
+```
+do
+{
+    循环体
+}while(循环条件)
+```
+- **执行过程:** 
+  1. 首先执行一遍循环体
+  2. 拿着执行结果 去判断循环条件
+  3. 如果成立, 继续执行do中循环体
+  4. 不成立就跳出循环
 
+- **特点:** 先循环, 再判断; **至少执行一次**
+
+## 小练习
+- 题目: 不断要求用户输入一个数字(假定均是正整数), 用户输入end时, 显示刚才输入的数字中最大的数字
