最后加一些练习

--- a/C#学习日记/Day9_while和break___2022-07-24_21-10.md
+++ b/C#学习日记/Day9_while和break___2022-07-24_21-10.md
@@ -161,7 +161,7 @@ Console.ReadKey();
 do
 {
     循环体
-}while(循环条件)
+}while(循环条件);
 ```
 - **执行过程:** 
   1. 首先执行一遍循环体
@@ -170,6 +170,52 @@ do
   4. 不成立就跳出循环
 
 - **特点:** 先循环, 再判断; **至少执行一次**
+> **注意:** while后面带有封号
 
 ## 小练习
+- 练习: 不断输入学生姓名, 输入q结束
+```
+string name = "";
+do
+{
+    Console.WriteLine("输入姓名, 输入q结束");
+    name = Console.ReadLine();
+} while (name != "q");        
+
+Console.ReadKey();
+```
+
+
+
 - 题目: 不断要求用户输入一个数字(假定均是正整数), 用户输入end时, 显示刚才输入的数字中最大的数字
+
+```
+string input = "";
+int max = 0;
+while (input != "end")
+{
+    Console.WriteLine("输入正整数, 若输入end将显示最大值");
+    input = Console.ReadLine();
+    if (input != "end")
+    {
+        try
+        {
+            int number = Convert.ToInt32(input);
+            //打擂台
+            if (number > max)
+            {
+                max = number;
+            }
+        }
+        catch
+        {
+            Console.WriteLine("输入不符合规范, 重新输入");
+        }
+    }
+    else    //end
+    {
+        Console.WriteLine("最大值是{0}", max);
+    }
+}
+Console.ReadKey();
+```
