时间较紧, 明天接着做一些练习 明天是for循环的嵌套

--- a/C#学习日记/Day10_continue和for___2022-07-26_22-48.md
+++ b/C#学习日记/Day10_continue和for___2022-07-26_22-48.md
@@ -7,6 +7,7 @@
 
 ## 主要内容
 - 关键字 ***Continue***
+- ***for*** 循环
 - 程序调试
 - - -
 
@@ -47,8 +48,39 @@ Console.ReadKey();
 ```
 > 自己写的时候错了两次, 一定要记得**i++和j++**
 
+## ***for*** 循环
+- 语法:
+```
+for (int i = 0; i < length; i++)
+{
+  循环体
+}
+``` 
 
+- for后面的三个表达式:
+  + 声明循环变量, 记录循环次数
+  + 循环条件
+  + 改变循环的条件, 使循环条件会不成立
 
+- **特点:** 一般用于知道循环**次数**的循环 
+- 补充: 小窍门, for加<kbd>tab</kbd>两次可以跳出框架片段  
+  打forr可以跳出逆向循环的片段
+
+## 练习
+- 求水仙花数
+```
+for (int i = 100; i <= 999; i++)
+{
+    int a = i / 100;
+    int b = i % 100 / 10;
+    int c = i % 10;
+    if (a * a * a + b * b * b + c * c * c == i)
+    {
+        Console.WriteLine(i);
+    }
+}
+Console.ReadKey();
+```
 
 
 ---
