--- a/C#学习日记/Day10_continue和for___2022-07-26_22-48.md
+++ b/C#学习日记/Day10_continue和for___2022-07-26_22-48.md
@@ -7,7 +7,7 @@
 
 ## 主要内容
 - 关键字 ***Continue***
-- ***for*** 循环
+- ***for*** 循环(和嵌套)
 - 程序调试
 - - -
 
@@ -82,6 +82,22 @@ for (int i = 100; i <= 999; i++)
 Console.ReadKey();
 ```
 
+## ***for***循环的嵌套
+- 打印九九乘法表
+
+```
+for (int i = 1; i < 10; i++)
+{
+    for (int j = 1; j <= i; j++)
+    {
+        Console.Write("{0}x{1}={2}\t", i, j, i * j);
+    }
+    Console.Write("\n");
+}
+Console.ReadKey();
+```
+> `Console.Write()`用来表示接着前面打印  
+> `Console.WriteLine()`**相当于**`Console.Write("xxx\n")`
 
 ---
 ## 程序调试
