补充一道习题

--- a/C#学习日记/Day10_continue和for___2022-07-26_22-48.md
+++ b/C#学习日记/Day10_continue和for___2022-07-26_22-48.md
@@ -82,6 +82,18 @@ for (int i = 100; i <= 999; i++)
 Console.ReadKey();
 ```
 
+- 输出加法表
+```
+Console.WriteLine("输入正整数");
+int number = Convert.ToInt32(Console.ReadLine());
+for (int i = 0; i <= number; i++)
+{
+    Console.WriteLine("{0}+{1}={2}", i, number - i, number);
+}
+Console.ReadKey();
+```
+> ***try-catch***用户的输入是个**好习惯**(虽然但是懒得这么做orz)
+
 ## ***for***循环的嵌套
 - 打印九九乘法表
 
