数组的开端

--- a/C#学习日记/Day13_数组___2022-08-04_23-11.md
+++ b/C#学习日记/Day13_数组___2022-08-04_23-11.md
@@ -14,13 +14,28 @@ tags:
 - 一次性存储多个**相同类型**的变量
 - 语法
 ```
+//法1
 数组类型[] 数组名 = new 数组类型[数组长度]
-int[] nums = new int[10];
+int[] nums1 = new int[10];
+//法2
+int[] nums2 = {1,2,3};
+//法3
+int[] nums3 = new int[3]{1,2,3};
+//法4
+int[] nums3 = new int[]{1,2,3};
 ```
 - 说明:
-  + 声明数组时, 在内存中, 给每个元素赋予**初始值**0(*占内存*)
+  + 声明数组时, 在内存中, 给每个元素赋予**初始值**(*占内存*)
   + 开辟多少内存空间取决于数组长度, 每一块空间称之为数组的一个**元素**
   + 每个元素的标号称为下标或**索引**(*访问*的依据)
   + 索引由`0`开始, 数组的最后一个元素的索引为`数组长度-1`
   + 索引超出数组界限会抛异常!
   + **数组长度一旦被声明就不再改变**
+
+- 不同数据类型对应的初始值
+
+|数据类型|默认初始值|
+|:--:|:--:|
+|int|0|
+|string|null|
+|bool|false|
