终于会定义方法了!

--- a/C#学习日记/Day14_数组的操作___2022-08-05_22-55.md
+++ b/C#学习日记/Day14_数组的操作___2022-08-05_22-55.md
@@ -70,3 +70,24 @@ Console.ReadKey();
 |   第3次    |  2,1,0,4,5   |     3      |
 |   第4次    |  1,0,3,4,5   |     2      |
 |   第5次    |  1,2,3,4,5   |     1      |
+
+```
+int[] nums = { 5, 4, 3, 2, 1, 0 }; 
+for (int i = 0; i < nums.Length-1; i++) //控制比较的次数, 六个数比5次, Length-1=5
+{
+    for (int j = 0; j < nums.Length-1-i; j++)   //控制每次比较中交换的次数, 枚举找规律
+    {
+        if (nums[j] > nums[j + 1])
+        {
+            int temp = nums[j + 1];
+            nums[j + 1] = nums[j];
+            nums[j] = temp;
+        }
+    }
+}
+for (int i = 0; i < nums.Length; i++)
+{
+    Console.Write(nums[i]);
+}
+```
+> 相当于每次都把前面的i-1个数中最大的拉到最右边, 故一定可以排序
