方法再次深入

--- a/C#学习日记/Day16_掌握方法的使用___2022-08-07_20-30.md
+++ b/C#学习日记/Day16_掌握方法的使用___2022-08-07_20-30.md
@@ -8,8 +8,10 @@ tags:
 目录
 - [复习](#复习)
 - [方法的调用问题](#方法的调用问题)
-- [练习](#练习)
+- [练习1](#练习1)
 - [方法的概念](#方法的概念)
+- [练习2](#练习2)
+- [两个练习](#两个练习)
 
 ## 复习
 - 常量: 赋予初始值后, **不可以重新赋值**
@@ -112,7 +114,7 @@ public static void int _number = 10;
 - 如果**调用者**要获得**被调用者**的值
   + 用***return***
 
-## 练习
+## 练习1
 - 写一个方法, 判断是否是闰年
 
 ```
@@ -138,3 +140,129 @@ public static bool IsRun(int year)
 - 实参: 在传参时, 实实在在**存在**的参数
 - 形参: 在方法中使用的**形式上**的参数, 作用域只在其方法内部
 - 两者关系: 作用域不同, 没有必然的练习, 只有数据类型要求一致, 且两者**都在内存中开辟空间**
+
+## 练习2
+- 读取输入的整数, 如果输入是数字, 则返回, 否则提示用户重新输入
+
+```
+while (true)
+{
+    Console.WriteLine("请输入数字");
+
+    try
+    {
+        int number = Convert.ToInt32(Console.ReadLine());
+        Console.WriteLine(number);
+        break;
+    }
+    catch
+    {
+        Console.WriteLine("输入有误");
+    }
+}
+Console.ReadKey();
+```
+- 典型错误
+```
+Main(){
+    NewMethod();
+    Console.ReadKey();
+}
+```
+> 原则: **方法的功能一定要单一**
+> 忌讳: **方法中出现<u>提示用户输入</u>的字眼**
+> > 否则, 这就限定了这个方法只能在控制台程序中使用  
+> 而其他程序开发将不兼容  
+> 团队合作中也很讨厌
+
+- 正确事例
+```
+static void Main(string[] args) //Main函数
+{  //代码从这里走起
+    Console.WriteLine("请输入一个整数");
+    Console.WriteLine(GetNumber(Console.ReadLine()));
+    Console.ReadKey();
+
+}
+
+/// <summary>
+/// 判断用户的输入是否是数字
+/// 是数字就返回
+/// 不是, 就提示用户重新输入
+/// </summary>
+public static int GetNumber(string s)
+{
+    while (true)
+    {
+        try
+        {
+            int number = Convert.ToInt32(s);
+            return number;
+        }
+        catch
+        {
+            Console.WriteLine("请重新输入");
+            s = Console.ReadLine();
+        }
+    }
+}
+```
+
+## 两个练习
+- 只允许输入y和n, 用方法实现
+
+```
+static void Main(string[] args) //Main函数
+{  //代码从这里走起
+    // 方法的效果, 只输入y或n, 只要不是, 重新输入
+
+    Console.WriteLine("请输入y或者n");
+    Console.WriteLine(IsYesOrNo(Console.ReadLine()));
+    Console.ReadKey();
+
+}
+/// <summary>
+/// 限定用户只能输入yes或者no
+/// </summary>
+/// <param name="input">用户的输入</param>
+/// <returns>"y"或者"n"</returns>
+public static string IsYesOrNo(string input)
+{
+    while (true)
+    {
+        if (input == "y" || input == "n")
+        {
+            return input;
+        }
+        else
+        {
+            Console.WriteLine("只能输入y或者n, 请重新输入");
+            input = Console.ReadLine();
+        }
+    }
+}
+```
+
+- 计算输入数组的总和
+
+```
+static void Main(string[] args) //Main函数
+{  //代码从这里走起
+    int[] numbers = { 1, 2, 3, 4, 5, 6 };
+    Console.WriteLine(GetSum(numbers));
+}
+/// <summary>
+/// 输入整数数组, 返回其总和
+/// </summary>
+/// <param name="numbers">数组</param>
+/// <returns>总和</returns>
+public static int GetSum(int[] numbers)
+{
+    int sum = 0;
+    for (int i = 0; i < numbers.Length; i++)
+    {
+        sum += numbers[i];
+    }
+    return sum;
+}
+```
