--- a/C#学习日记/Day18_方法的重载和递归___2022-08-11_21-31.md
+++ b/C#学习日记/Day18_方法的重载和递归___2022-08-11_21-31.md
@@ -35,3 +35,5 @@ public static void M(string a, string b, out string c)
   即, **方法的重载和返回值没有关系**
 
 ## 方法的递归
+- **注意:** 记得用***return***退出
+- **备注:** ***return***退出递归程序会逐个退出
