先练一道题, 期待飞行棋

--- a/C#学习日记/Day19_方法的三个练习___2022-08-13_22-43.md
+++ b/C#学习日记/Day19_方法的三个练习___2022-08-13_22-43.md
@@ -9,3 +9,25 @@ tags:
 - [练习1](#练习1)
 
 ## 练习1
+- **题目**: 一个***string***类型的数组, 要输出其中最长的字符串
+- 参考字符串: "Bernoulli","Fatou","Euler","Gauss","Riemann","Neumann","Newton","Maxwell","Kepler","Leibniz","Lagrange"
+```
+static void Main(string[] args) //Main函数
+{  //代码从这里走起
+    string[] names = { "Bernoulli", "Fatou", "Euler", "Gauss", "Riemann", "Neumann", "Newton", "Maxwell", "Kepler", "Leibniz", "Lagrange" };
+    string max = GetLongest(names);
+    Console.WriteLine(max);
+}
+public static string GetLongest(string[] s)
+{
+    string max = s[0];
+    for (int i = 0; i < s.Length; i++)
+    {
+        if (s[i].Length > max.Length)
+        {
+            max = s[i];
+        }
+    }
+    return max;
+}
+```
