用tag来查看笔记 受站点tag思维的影响, 以后笔记管理方式大概就是这样了

--- a/C#学习日记/Day00_学习准备与前瞻___2022-07-13_23-32.md
+++ b/C#学习日记/Day00_学习准备与前瞻___2022-07-13_23-32.md
@@ -1,8 +1,10 @@
 ---
-   tags:
-      - C#
-      - 编程
-      - 学习笔记
+title: Day00_学习准备与前瞻
+date: 2022-07-13
+tags:
+      - C#学习笔记
+      - study
+      
 ---
 
 ## 主要内容
