--- a/C#学习日记/Day03_基础语法之注释和变量___2022-07-17_22-30.md
+++ b/C#学习日记/Day03_基础语法之注释和变量___2022-07-17_22-30.md
@@ -1,8 +1,10 @@
 ---
-   tags:
-      - C#
-      - 编程
-      - 学习笔记
+title: Day03_基础语法之注释和变量
+date: 2022-07-17
+tags:
+  - C#学习笔记
+  - study
+      
 ---
 
 ## 主要内容
