--- a/C#学习日记/Day04_运算符and变量操作___2022-07-19_11-41.md
+++ b/C#学习日记/Day04_运算符and变量操作___2022-07-19_11-41.md
@@ -1,8 +1,10 @@
 ---
-   tags:
-      - C#
-      - 编程
-      - 学习笔记
+title: Day04_运算符and变量操作
+date: 2022-07-19
+tags:
+  - C#学习笔记
+  - study
+      
 ---
 
 ## 主要内容
