--- a/C#学习日记/Day05_接受用户输入_基础符号_类型转换___2022-07-20_13-07.md
+++ b/C#学习日记/Day05_接受用户输入_基础符号_类型转换___2022-07-20_13-07.md
@@ -1,8 +1,10 @@
 ---
-   tags:
-      - C#
-      - 编程
-      - 学习笔记
+title: Day05_接受用户输入_基础符号_类型转换
+date: 2022-07-20
+tags:
+  - C#学习笔记
+  - study
+      
 ---
 
 ## 主要内容
