--- a/C#学习日记/Day06_Convert类型转换_加加减减_关系运算与逻辑判断___2022-07-21_15-50.md
+++ b/C#学习日记/Day06_Convert类型转换_加加减减_关系运算与逻辑判断___2022-07-21_15-50.md
@@ -1,8 +1,10 @@
 ---
-   tags:
-      - C#
-      - 编程
-      - 学习笔记
+title: Day06_Convert类型转换_加加减减_关系运算与逻辑判断
+date: 2022-07-21
+tags:
+  - C#学习笔记
+  - study
+      
 ---
 
 ## 主要内容
