--- a/C#学习日记/Day07_if结构___2022-07-22_16-35.md
+++ b/C#学习日记/Day07_if结构___2022-07-22_16-35.md
@@ -1,8 +1,10 @@
 ---
-   tags:
-      - C#
-      - 编程
-      - 学习笔记
+title: Day07_if结构
+date: 2022-07-22
+tags:
+   - C#学习笔记
+   - study
+      
 ---
 
 ## 主要内容
