--- a/C#学习日记/Day08_异常捕获_switch-case结构___2022-07-23_22-42.md
+++ b/C#学习日记/Day08_异常捕获_switch-case结构___2022-07-23_22-42.md
@@ -1,8 +1,10 @@
 ---
-    tags:
-        - C#
-        - 编程
-        - 学习笔记
+title: Day08_异常捕获_switch-case结构
+date: 2022-07-23
+tags:
+    - C#学习笔记
+    - study
+        
 ---
 
 ## 主要内容
