--- a/C#学习日记/Day09_while和break___2022-07-24_21-10.md
+++ b/C#学习日记/Day09_while和break___2022-07-24_21-10.md
@@ -1,8 +1,10 @@
 ---
-    tags:
-        - C#
-        - 编程
-        - 学习笔记
+title: Day09_while和break
+date: 2022-07-24
+tags:
+    - C#学习笔记
+    - study
+        
 ---
 
 ## 主要内容
