--- a/C#学习日记/Day10_continue和for___2022-07-26_22-48.md
+++ b/C#学习日记/Day10_continue和for___2022-07-26_22-48.md
@@ -1,8 +1,10 @@
 ---
-    tags:
-        - C#
-        - 编程
-        - 学习笔记
+title: Day10_continue和for
+date: 2022-07-26
+tags:
+    - C#学习笔记
+    - study
+        
 ---
 
 ## 主要内容
