--- a/C#学习日记/Day11_类型转换和方法简介_更多的习题_三元表达式___2022-07-30_21-36.md
+++ b/C#学习日记/Day11_类型转换和方法简介_更多的习题_三元表达式___2022-07-30_21-36.md
@@ -1,8 +1,10 @@
 ---
-    tags:
-        - C#
-        - 编程
-        - 学习笔记
+title: Day11_类型转换和方法简介_更多的习题_三元表达式
+date: 2022-07-30
+tags:
+    - C#学习笔记
+    - study
+        
 ---
 
 ## 主要内容
