--- a/C#学习日记/Js笔记___2022-07-23_11-20.md
+++ b/C#学习日记/Js笔记___2022-07-23_11-20.md
@@ -12,6 +12,7 @@ var array = [1,9,2,4,"a",10]
 - **返回:** ta的值
 - **注意:** 不要求参数(输了也没用)
 ```
+> var array = [1,9,2,4,"a",10]
 > array.pop();
 < 10
 > array
@@ -23,6 +24,7 @@ var array = [1,9,2,4,"a",10]
 - **返回:** 新数组的长度
 - **备注:** 原先的每个元素的序号+1
 ```
+> var array = [1,9,2,4,"a",10]
 > array.unshift("zhy");
 < 7
 > array
@@ -35,6 +37,7 @@ var array = [1,9,2,4,"a",10]
 - **参数:** 参数n1是指从array[n1]这一元素开始, n2是指新数组的**长度**
 - **注意:** n2即便很大也不会使新数组的长度变得很大, 只会一直剪切到原数组的最后一个元素为止
 ```
+> var array = [1,9,2,4,"a",10]
 > array.splice(1,3)
 < [9, 2, 4]
 > array
@@ -52,6 +55,7 @@ var array = [1,9,2,4,"a",10]
 - **注意:** 1. 是复制, 原数组无变化, 要与splice区分  
             2. 遵循**左开右闭**的原则
 ```
+> var array = [1,9,2,4,"a",10]
 > array.slice(3,5);
 < [4, 'a']
 > array
