事实上没有做完, 总共六道题 都是复习之前的题目

--- a/C#学习日记/Day19_方法的三个练习___2022-08-13_22-43.md
+++ b/C#学习日记/Day19_方法的三个练习___2022-08-13_22-43.md
@@ -7,6 +7,8 @@ tags:
 ---
 目录
 - [练习1](#练习1)
+- [练习2](#练习2)
+- [练习3](#练习3)
 
 ## 练习1
 - **题目**: 一个***string***类型的数组, 要输出其中最长的字符串
@@ -31,3 +33,72 @@ public static string GetLongest(string[] s)
     return max;
 }
 ```
+
+## 练习2
+- **题目:** 判断等地
+- 判断依据: 90~100 为优, 80~89 为良...
+
+```
+static void Main(string[] args) //Main函数
+{  //代码从这里走起
+    while (true)
+    {
+
+        try
+        {
+            Console.WriteLine("请输入考试成绩");
+            int input = Convert.ToInt32(Console.ReadLine());
+            string grade = DecideGrade(input);
+            Console.WriteLine("考试等地为{0}", grade);
+            break;
+        }
+        catch
+        {
+            Console.WriteLine("成绩输入有误, 请重新输入");
+        }
+    }
+    Console.ReadKey();
+}
+public static string DecideGrade(int s)
+{
+    s = s / 10;
+    switch (s)
+    {
+        case 10:
+        case 9:
+            return "优";
+        case 8:
+            return "良";
+        case 7:
+            return "次";
+        case 6:
+            return "合格";
+        default:
+            return "不及格";
+    }
+}
+```
+
+
+## 练习3
+- 计算任意个值的总和
+
+```
+static void Main(string[] args) //Main函数
+{  //代码从这里走起
+    int sum = GetSum2(1, 2, 3, 4, 5, 6, 7, 8);
+    Console.WriteLine(sum);
+}
+public static int GetSum2(params int[] nums)
+{
+    int sum = 0;
+    for (int i = 0; i < nums.Length; i++)
+    {
+        sum += nums[i];
+    }
+    return sum;
+}
+```
+
+> **注意:** 要想用方法来改变一个数值, 必须要通过返回值来实现  
+> **但是,** 如果是改变数组, 不需要返回值
