简单的游戏头

--- a/C#学习日记/Day20_飞行棋___2022-08-23_08-27.md
+++ b/C#学习日记/Day20_飞行棋___2022-08-23_08-27.md
@@ -6,7 +6,21 @@ tags:
     - study
 ---
 目录
-- [](#)
-- - -
+- [游戏头](#游戏头)
 
-## 
+## 游戏头
+- 作用: 输出游戏初始界面
+```
+Console.ForegroundColor = ConsoleColor.Cyan;
+Console.BackgroundColor = ConsoleColor.Black;
+Console.WriteLine(@"
+********************************************
+********************************************
+*******飞行棋游戏v1.0  By zhyDaDa***********
+********************************************
+********************************************
+");
+```
+> `Console.ForegroundColor`和`Console.BackgroundColor`分别用于设置控制台输出的**前景色**和**背景色**  
+> `@`的使用能按照原格式输出  
+> 但要实现彩虹配色, 就得每输出一行, 就设置一遍前景色
