虽然很想实现随机地图的效果...

--- a/C#学习日记/Day20_飞行棋___2022-08-23_08-27.md
+++ b/C#学习日记/Day20_飞行棋___2022-08-23_08-27.md
@@ -7,9 +7,10 @@ tags:
 ---
 目录
 - [游戏头](#游戏头)
+- [初始化地图](#初始化地图)
 
 ## 游戏头
-- 作用: 输出游戏初始界面
+- **作用**: 输出游戏初始界面
 ```
 Console.ForegroundColor = ConsoleColor.Cyan;
 Console.BackgroundColor = ConsoleColor.Black;
@@ -24,3 +25,10 @@ Console.WriteLine(@"
 > `Console.ForegroundColor`和`Console.BackgroundColor`分别用于设置控制台输出的**前景色**和**背景色**  
 > `@`的使用能按照原格式输出  
 > 但要实现彩虹配色, 就得每输出一行, 就设置一遍前景色
+
+## 初始化地图
+- **作用**: 加载地图所需要的资源, 为画地图做准备
+- 地图的数据采用***int***存储(***string***更困难一些)
+- 数字变成字符串的过程, 就是初始化地图的过程
+- 由于所有方法都需要操作Maps数组, 因此建议使用**静态字段**模拟全局变量
+- 定义地图的方法: 把存在特殊关卡的位置全部标出来
