画出第一行地图 虽然但是...显示是错位的

--- a/C#学习日记/Day20_飞行棋___2022-08-23_08-27.md
+++ b/C#学习日记/Day20_飞行棋___2022-08-23_08-27.md
@@ -8,6 +8,7 @@ tags:
 目录
 - [游戏头](#游戏头)
 - [初始化地图](#初始化地图)
+- [绘制地图](#绘制地图)
 
 ## 游戏头
 - **作用**: 输出游戏初始界面
@@ -32,3 +33,88 @@ Console.WriteLine(@"
 - 数字变成字符串的过程, 就是初始化地图的过程
 - 由于所有方法都需要操作Maps数组, 因此建议使用**静态字段**模拟全局变量
 - 定义地图的方法: 把存在特殊关卡的位置全部标出来
+
+```
+/// <summary>
+/// 初始化地图, 修改地图数组
+/// </summary>
+public static void InitiateMap()
+{
+    int[] luckyTurn = { 6, 23, 40, 55, 69, 83 };    //幸运轮盘
+    AddSpecialToMaps(luckyTurn, 1);
+    int[] landMine = { 5, 13, 17, 33, 38, 50, 64, 80, 94 };     //地雷
+    AddSpecialToMaps(landMine, 2);
+    int[] pause = { 9, 27, 60, 93 };    //暂停
+    AddSpecialToMaps(pause, 3);
+    int[] timeTunnel = { 20, 25, 45, 63, 72, 88, 90 };  //时空隧道
+    AddSpecialToMaps(timeTunnel, 4);
+}
+
+/// <summary>
+/// 输入一个数组, 把数组中的每个数字对应的地图位置
+/// 修改为输入的数值
+/// </summary>
+/// <param name="array">元素是若干索引</param>
+/// <param name="sign">要改为的数字</param>
+public static void AddSpecialToMaps(int[] array, int sign)
+{
+    for (int i = 0; i < array.Length; i++)
+    {
+        Maps[array[i]] = sign;
+    }
+}
+```
+
+## 绘制地图
+- 符号最好是全角的
+
+```
+/// <summary>
+/// 画地图
+/// </summary>
+public static void DrawMap()
+{
+    Console.ForegroundColor = ConsoleColor.White;
+    //画第一行
+    for (int i = 0; i < 30; i++)
+    {
+
+        //如果两位玩家位置重合, 且都在地图上画一对尖括号
+        if (PlayerPos[0] == PlayerPos[1] && PlayerPos[0]==i)
+        {
+            Console.Write("<>");
+        }
+        else if (PlayerPos[0] == i)
+        {
+            Console.Write("Ａ");
+        }
+        else if (PlayerPos[0] == i)
+        {
+            Console.Write("Ｂ");
+        }
+        else
+        {
+            switch (Maps[i])
+            {
+                case 0:
+                    Console.Write("□");
+                    break;
+                case 1:
+                    Console.Write("⨷");
+                    break;
+                case 2:
+                    Console.Write("☆");
+                    break;
+                case 3:
+                    Console.Write("∆");
+                    break;
+                case 4:
+                    Console.Write("卐");
+                    break;
+            }
+        }
+    }
+
+
+}//这是方法的括号
+```
