调整字体和字符花了不少时间orz

--- a/C#学习日记/Day20_飞行棋___2022-08-23_08-27.md
+++ b/C#学习日记/Day20_飞行棋___2022-08-23_08-27.md
@@ -118,3 +118,83 @@ public static void DrawMap()
 
 }//这是方法的括号
 ```
+
+- 这里需要将方法抽离出来
+- **值得注意的是**: 方法中最好不要打印控制台! 因此采用返回值的形式
+
+```
+/// <summary>
+/// 返回要画出的一个格子
+/// </summary>
+/// <param name="i">对应的位置</param>
+/// <returns>对应的格子的string</returns>
+public static string TheStringOfTheMap(int i)
+{
+    string str = "";
+    //如果两位玩家位置重合, 且都在地图上画一对尖括号
+    if (PlayerPos[0] == PlayerPos[1] && PlayerPos[0] == i)
+    {
+        str = "§";
+    }
+    else if (PlayerPos[0] == i)
+    {
+        str = "Ａ";
+    }
+    else if (PlayerPos[0] == i)
+    {
+        str = "Ｂ";
+    }
+    else
+    {
+        switch (Maps[i])
+        {
+            case 0:
+                //Console.ForegroundColor = ConsoleColor.White;
+                str = "□";
+                break;
+            case 1:
+                //Console.ForegroundColor = ConsoleColor.Green;
+                str = "○";
+                break;
+            case 2:
+                //Console.ForegroundColor = ConsoleColor.Red;
+                str = "☆";
+                break;
+            case 3:
+                //Console.ForegroundColor = ConsoleColor.Blue;
+                str = "↓";
+                break;
+            case 4:
+                //Console.ForegroundColor = ConsoleColor.DarkMagenta;
+                str = "卐";
+                break;
+        }
+    }
+
+    return str;
+}
+```
+> p.s. 事实上, 要想让这些奇怪的符号在控制台排列整齐, 需要调整字体为黑体(win11特有)  
+> p.s.p.s. 那些个//是原本想要变换颜色的, 不知怎么的产生了奇怪的错位, 于是乎放弃  
+> p.s.p.s.p.s. 说不定以后自己(or读者)有可能调试成功, 我记录一下我逐步调试的发现:  
+> > 就是当变色之后, 下一个要打印的字符会把之前打印的所有字符当成是半角的字符  
+> > ta就会跑到前面去, 接下来的字符就会和先前打印的重合造成重影
+
+- 小竖行的处理相对简单, 只要打印空格就行
+- 请注意空格数量
+
+```
+//换行
+Console.WriteLine();
+
+//画第一个数列(就一个)
+for (int i = 30; i < 35; i++)
+{
+    for (int j = 0; j <= 28; j++)
+    {
+        Console.Write("  ");
+    }
+    Console.Write(TheStringOfTheMap(i));
+    Console.WriteLine();
+}
+```
