画好地图, 判断用户姓名输入

--- a/C#学习日记/Day20_飞行棋___2022-08-23_08-27.md
+++ b/C#学习日记/Day20_飞行棋___2022-08-23_08-27.md
@@ -9,6 +9,7 @@ tags:
 - [游戏头](#游戏头)
 - [初始化地图](#初始化地图)
 - [绘制地图](#绘制地图)
+- [输入姓名](#输入姓名)
 
 ## 游戏头
 - **作用**: 输出游戏初始界面
@@ -197,4 +198,35 @@ for (int i = 30; i < 35; i++)
     Console.Write(TheStringOfTheMap(i));
     Console.WriteLine();
 }
+```
+
+## 输入姓名
+- 经典的判断
+- 小问题: 全部输入空格的话其实应该是不被允许的(虽然这样没什么不好)
+
+```
+#region 输入玩家姓名
+Console.WriteLine("请输入玩家A的姓名");
+PlayerNames[0] = Console.ReadLine();
+while (PlayerNames[0] == "")
+{
+    Console.WriteLine("玩家姓名不得为空, 请重新输入");
+    PlayerNames[0] = Console.ReadLine();
+}
+
+Console.WriteLine("请输入玩家B的姓名");
+PlayerNames[1] = Console.ReadLine();
+while (PlayerNames[1] == ""|| PlayerNames[1]== PlayerNames[0])
+{
+    if (PlayerNames[1] == "")
+    {
+        Console.WriteLine("玩家姓名不得为空, 请重新输入");
+    }
+    else
+    {
+        Console.WriteLine("玩家姓名不得相同, 请重新输入");
+    }
+    PlayerNames[1] = Console.ReadLine();
+}
+#endregion
 ```
