--- a/C#学习日记/Day20_飞行棋___2022-08-23_08-27.md
+++ b/C#学习日记/Day20_飞行棋___2022-08-23_08-27.md
@@ -10,6 +10,9 @@ tags:
 - [初始化地图](#初始化地图)
 - [绘制地图](#绘制地图)
 - [输入姓名](#输入姓名)
+- [核心游戏机制](#核心游戏机制)
+- [最后调整***Main***函数](#最后调整main函数)
+- [总结](#总结)
 
 ## 游戏头
 - **作用**: 输出游戏初始界面
@@ -230,3 +233,197 @@ while (PlayerNames[1] == ""|| PlayerNames[1]== PlayerNames[0])
 }
 #endregion
 ```
+
+## 核心游戏机制
+```
+public static void PlayGame(int playerNumber)
+{
+    Console.WriteLine("{0}按任意键开始投掷骰子", PlayerNames[playerNumber]);
+    Console.ReadKey(true);
+    Random r = new Random();
+    int rNumber = r.Next(1, 7);
+    Console.WriteLine("{0}投出了点数{1}, 并向前移动{1}格, 按任意键行动", PlayerNames[playerNumber], rNumber);
+    PlayerPos[playerNumber] += rNumber;
+    ChangePos();
+    Console.ReadKey(true);
+    //判断踩到的格子的情况
+    if (PlayerPos[0] == PlayerPos[1])
+    {
+        Console.WriteLine("玩家{0}踩到了玩家{1}, 玩家{2}退6格", PlayerNames[playerNumber], PlayerNames[1 - playerNumber], PlayerNames[1 - playerNumber]);
+        PlayerPos[1 - playerNumber] -= 6;
+        ChangePos();
+        Console.ReadKey(true);
+    }
+    else
+    {
+        switch (Maps[PlayerPos[playerNumber]])
+        {
+            case 0:
+                Console.WriteLine("玩家{0}踩到了普通方块, 安全", PlayerNames[playerNumber]);
+                Console.ReadKey(true);
+                break;
+            case 1:
+                Console.WriteLine("玩家{0}踩到了幸运轮盘, 请选择:\n1---交换位置\t2---轰炸对方", PlayerNames[playerNumber]);
+                string input = Console.ReadLine();
+                while (true)
+                {
+                    if (input == "1")
+                    {
+                        Console.WriteLine("玩家{0}和玩家{1}互换位置", PlayerNames[playerNumber], PlayerNames[1 - playerNumber]);
+                        Console.ReadKey(true);
+                        int temp = PlayerPos[0];
+                        PlayerPos[0] = PlayerPos[1];
+                        PlayerPos[1] = temp;
+                        Console.WriteLine("交换成功! 按任意键继续");
+                        Console.ReadKey(true);
+                        break;
+                    }
+                    else if (input == "2")
+                    {
+                        Console.WriteLine("玩家{0}轰炸了玩家{1}", PlayerNames[playerNumber], PlayerNames[1 - playerNumber]);
+                        Console.ReadKey(true);
+                        PlayerPos[1-playerNumber] -= 6;
+                        ChangePos();
+                        Console.WriteLine("玩家{0}退了6格! 按任意键继续", PlayerNames[1 - playerNumber]);
+                        Console.ReadKey(true);
+                        break;
+                    }
+                    Console.WriteLine("只允许输入1或2, 1---交换位置\t2---轰炸对方");
+                    input = Console.ReadLine();
+                }
+                break;
+            case 2:
+                Console.WriteLine("玩家{0}踩到了地雷, 退六格", PlayerNames[playerNumber]);
+                PlayerPos[playerNumber] -= 6;
+                ChangePos();
+                Console.ReadKey(true);
+                break;
+            case 3:
+                Console.WriteLine("玩家{0}踩到了暂停, 下一回合跳过", PlayerNames[playerNumber]);
+                Flags[playerNumber] = true;
+                Console.ReadKey(true);
+                break;
+            case 4:
+                Console.WriteLine("玩家{0}踩到了时空隧道, 前进10格", PlayerNames[playerNumber]);
+                PlayerPos[playerNumber] += 10;
+                ChangePos();
+                Console.ReadKey(true);
+                break;
+        }//switch的end
+    }//判断的end
+
+    ChangePos();
+    Console.Clear();
+    DrawMap();
+}
+```
+
+> 为了防止出现被干出地图的情况发生  
+> 需要采用一个修正的机制
+
+```
+public static void ChangePos()
+{
+    if (PlayerPos[0] < 0)
+    {
+        PlayerPos[0] = 0;
+    }
+    if (PlayerPos[0] >= 99)
+    {
+        PlayerPos[0] = 99;
+    }
+    if (PlayerPos[1] < 0)
+    {
+        PlayerPos[1] = 0;
+    }
+    if (PlayerPos[1] >= 99)
+    {
+        PlayerPos[1] = 99;
+    }
+}
+```
+
+## 最后调整***Main***函数
+
+```
+static void Main()
+{
+    GameShow();
+    Console.WriteLine();
+    #region 输入玩家姓名
+    Console.WriteLine("请输入玩家A的姓名");
+    PlayerNames[0] = Console.ReadLine();
+    while (PlayerNames[0] == "")
+    {
+        Console.WriteLine("玩家姓名不得为空, 请重新输入");
+        PlayerNames[0] = Console.ReadLine();
+    }
+
+    Console.WriteLine("请输入玩家B的姓名");
+    PlayerNames[1] = Console.ReadLine();
+    while (PlayerNames[1] == "" || PlayerNames[1] == PlayerNames[0])
+    {
+        if (PlayerNames[1] == "")
+        {
+            Console.WriteLine("玩家姓名不得为空, 请重新输入");
+        }
+        else
+        {
+            Console.WriteLine("玩家姓名不得相同, 请重新输入");
+        }
+        PlayerNames[1] = Console.ReadLine();
+    }
+    #endregion
+    //输入完姓名, 清屏
+    Console.Clear();
+
+
+    GameShow();
+    Console.ForegroundColor = ConsoleColor.Green;
+    Console.WriteLine("{0}的位置用A表示", PlayerNames[0]);
+    Console.WriteLine("{0}的位置用B表示", PlayerNames[1]);
+    Console.WriteLine("两人重合的位置用§表示");
+
+
+    InitiateMap();
+    DrawMap();
+
+    //只要没到终点一直循环
+    while (PlayerPos[0] < 99 && PlayerPos[1] < 99)
+    {
+        if (!Flags[0])
+        {
+            PlayGame(0);
+        }
+        else { Flags[0] = false; }
+        if (PlayerPos[0] >= 99)
+        {
+            Console.BackgroundColor = ConsoleColor.Red;
+            Console.ForegroundColor = ConsoleColor.Yellow;
+            Console.WriteLine("玩家{0}获胜!!!", PlayerNames[0]);
+            break;
+        }
+        if (!Flags[1])
+        {
+            PlayGame(1);
+        }
+        else { Flags[1] = false; }
+        if (PlayerPos[1] >= 99)
+        {
+            Console.BackgroundColor = ConsoleColor.Red;
+            Console.ForegroundColor = ConsoleColor.Yellow;
+            Console.WriteLine("玩家{0}获胜!!!", PlayerNames[1]);
+            break;
+        }
+    }
+
+    Console.ReadKey();
+
+
+}
+```
+
+## 总结
+- 除了字符无法设置前景和后景色, 其他都不错
+- 优化的话可以考虑更多的选项
+- 以及, *在可以通关的前提下"的随机地图(防止一整排的地雷的出现)
