新增一条关闭页面的方法

--- a/C#学习日记/Js笔记___2022-07-23_11-20.md
+++ b/C#学习日记/Js笔记___2022-07-23_11-20.md
@@ -3,7 +3,16 @@
     - js
 ---
 
+目录
+- [数组](#数组)
+  - [基本函数](#基本函数)
+  - [高阶函数](#高阶函数)
+- [字符串](#字符串)
+- [实/常/有 用的函数](#实常有-用的函数)
+- [参考来源](#参考来源)
+
 # 数组
+## 基本函数
 ```
 var array = [1,9,2,4,"a",10]
 ```
@@ -61,7 +70,99 @@ var array = [1,9,2,4,"a",10]
 > array
 < [1, 9, 2, 4, 'a', 10]
 ```
----
+
+## 高阶函数
+> array.map(function)
+- **作用:** 将一个函数作用在数组的每个元素上, 并用其返回值组成新的数组后输出
+- **返回:** 加工后产生的新数组
+- **参数:** 仅回调函数自身, 而回调函数会接收3个参数: `callback(currentValue, index, array)`
+- **注意:** 原数组不发生改变
+```
+> var aaa = [1, 3, 5];
+> function double(x) {
+      return x * 2;
+  } 
+> aaa.map(double);
+< [2, 6, 10]
+> aaa;
+< [1, 3, 5]
+```
+
+> array.reduce(function)
+- **作用:** 函数要求两个变量, 函数先作用于前两个元素, 并把返回值和数组的下一个元素再次作为参数继续运算
+- **返回:** 最终的一个结果, 视function的返回值而定
+- **参数:** function要求两个参数
+- **备注:** 其效果展开来看如下: `[x1, x2, x3, x4].reduce(f) = f(f(f(x1, x2), x3), x4)`
+```
+> var arr = [1, 3, 5, 7, 9];
+> arr.reduce(function (x, y) {
+      return x + y;
+  }); 
+< 25
+```
+
+> array.filter(function(element, index, self){})
+- **作用:** 把`Array`的某些元素过滤掉，然后返回剩下的元素组成的集合
+- **返回:** 一个筛选后的数组
+- **参数:** 一个回调函数, 应当返回一个*布尔值*, 其参数有三个: 
+  + `element`: 表示元素
+  + `index`: 元素位置
+  + `self`: 数组本身
+```
+> var arr = ['A', 'B', 'C'];
+> var r = arr.filter(function (element, index, self) {
+      console.log(element); // 依次打印'A', 'B', 'C'
+      console.log(index); // 依次打印0, 1, 2
+      console.log(self); // self就是变量arr
+      return true;
+  });
+< 'A'
+< 0
+< arr
+< 'B'
+< 1
+< arr
+< 'C'
+< 2
+< arr
+```
+
+# 字符串
+
+> parseInt(string, radix)
+- **作用:** 可解析一个字符串，并返回一个整数
+- **返回:** 整数
+- **参数:** +
+  + `string`: 要被解析的字符串。
+  + `radix`: 可选, 表示要解析的数字的基数; 该值介于 2 ~ 36 之间
+- **备注:** 
+  + 如果 string 以 "0x" 开头，parseInt() 会把 string 的其余部分解析为十六进制的整数。
+  + 如果 string 以 0 开头，那么 ECMAScript v3 允许 parseInt() 的一个实现把其后的字符解析为八进制或十六进制的数字。
+  + 如果 string 以 1 ~ 9 的数字开头，parseInt() 将把它解析为十进制的整数。
+```
+> parseInt("10.33")
+< 10
+> parseInt("10",8)
+< 8
+> parseInt("0x10")
+< 16
+```
+> Number(object)
+- **作用:** 把不同的对象转换为数字
+- **返回:** 数字以及`NaN`
+- **参数:** 一个JS对象
+- **备注:** 如果没有提供参数, 则返回0
+```
+> Number(true)
+< 1
+> Number(false)
+< 0
+> Number("432")
+< 432
+> Number("4 3 2")
+< NaN
+```
+
 # 实/常/有 用的函数
 
 > 完全深度复制
@@ -86,3 +187,17 @@ var deepCopy = function (source,isArray) {
     return result;
 }
 ```
+
+> 直接无提示关闭页面
+- **作用:** 同上, 用js实现
+- **备注:** 无提示
+```
+let a = document.createElement("a");
+a.href = "javascript:window.opener=null;window.open('','_self');window.close();";
+a.click();
+```
+
+
+# 参考来源
+1. [廖雪峰的官方网站](https://www.liaoxuefeng.com/)
+2. [菜鸟教程](https://www.runoob.com/js/js-tutorial.html)
