--- a/C#学习日记/Js笔记___2022-07-23_11-20.md
+++ b/C#学习日记/Js笔记___2022-07-23_11-20.md
@@ -13,9 +13,17 @@
 
 # 数组
 ## 基本函数
+> array.push()
+- **作用:** 在数组的末尾添加一个元素
+- **返回:** 新数组的**长度**
 ```
-var array = [1,9,2,4,"a",10]
+> var array = [1,9,2,4,"a",10]
+> array.push(true);
+< 7
+> array
+< [1, 9, 2, 4, 'a', 10, true]
 ```
+
 > array.pop()
 - **作用:** 删除最后一个元素
 - **返回:** ta的值
@@ -62,13 +70,24 @@ var array = [1,9,2,4,"a",10]
 - **返回:** 新数组
 - **参数:** n1是指开始的序号, array[n1]这个元素**不取**; n2是指结束的序号, array[n2]这个元素**取**
 - **注意:** 1. 是复制, 原数组无变化, 要与splice区分  
-            2. 遵循**左开右闭**的原则
+            1. 遵循**左开右闭**的原则
 ```
 > var array = [1,9,2,4,"a",10]
-> array.slice(3,5);
+> array.slice(3,5)
 < [4, 'a']
 > array
 < [1, 9, 2, 4, 'a', 10]
+```
+
+> array.join(str)
+- **作用:** 将数组的每个元素之间用str连接起来
+- **返回:** 一个字符串
+- **参数:** 一个可以被转为string的东西(数字,string之类)
+- **备注:** 原数组不变化
+```
+> var array = [1,9,2,4,"a",10];
+> array.join("|")
+< '1|9|2|4|a|10'
 ```
 
 ## 高阶函数
@@ -197,6 +216,11 @@ a.href = "javascript:window.opener=null;window.open('','_self');window.close();"
 a.click();
 ```
 
+> 刷新页面
+- **作用:** 如题
+```
+location.reload();
+```
 
 # 参考来源
 1. [廖雪峰的官方网站](https://www.liaoxuefeng.com/)
