加了一些料,除了数组

--- a/C#学习日记/Js笔记___2022-07-23_11-20.md
+++ b/C#学习日记/Js笔记___2022-07-23_11-20.md
@@ -7,6 +7,7 @@
 - [数组](#数组)
   - [基本函数](#基本函数)
   - [高阶函数](#高阶函数)
+  - [循环](#循环)
 - [字符串](#字符串)
 - [实/常/有 用的函数](#实常有-用的函数)
 - [参考来源](#参考来源)
@@ -34,6 +35,18 @@
 < 10
 > array
 < [1, 9, 2, 4, 'a']
+```
+
+> array.shift();
+- **作用:** 弹出数组的第一个元素
+- **返回:** 第一个元素
+- **备注:** 会改变原先的数组
+```
+> var array = [1,9,2,4,"a",10]
+> array.shift();
+< 1
+> array
+< [9, 2, 4, 'a', 10]
 ```
 
 > array.unshift(val);
@@ -90,6 +103,22 @@
 < '1|9|2|4|a|10'
 ```
 
+> arry = array1.concat(array1, array2)
+- **作用:** 将多个数组连接起来
+- **返回:** 组合而成的新数组
+- **参数:** 多个数组对象(按顺序)
+- **注意:** 原数组不变化, 一定要获取返回值
+```
+> var array1 = [1,2,3];
+> var array2 = [4,5,6];
+> var array3 = [7,8,9];
+> var arrayA = array1.concat(array2,array3);
+> arrayA
+<  [1, 2, 3, 4, 5, 6, 7, 8, 9]
+> array3.concat(array1,array2);
+<  [7, 8, 9, 1, 2, 3, 4, 5, 6]
+```
+
 ## 高阶函数
 > array.map(function)
 - **作用:** 将一个函数作用在数组的每个元素上, 并用其返回值组成新的数组后输出
@@ -144,6 +173,47 @@
 < 'C'
 < 2
 < arr
+```
+
+## 循环
+> for(a in aaa)
+- **作用:** 循环得到一个对象的所有属性的简洁写法
+- **参数:** 这里的`a`是`key`或者说是`property`
+- **注意:** 这里得到的`a`是`string`的形式, 千万别写`aaa.a`!!!
+- **备注:** 最好是对一个`object`使用
+```
+> let aaa = {
+  "name": "zhyDaDa",
+  "hobby": "programming",
+  "age": 3
+  }
+> for(a in aaa){
+    console.log(a);
+    console.log(aaa[a]);
+  }
+< name
+< zhyDaDa
+< hobby
+< programming
+< age
+< 3
+```
+
+> for(let b of bbb)
+- **作用:** 循环得到数组中每一个值的简洁写法
+- **参数:** `b`是一个*value*而非*index*
+- **备注:** 最好是对一个`array`使用
+```
+> var bbb = [1,'b',2,4,"zhyDaDa",10];
+> for(let b of bbb){
+    console.log(b);
+  }
+< 1
+< b
+< 2
+< 4
+< zhyDaDa
+< 10
 ```
 
 # 字符串
