--- a/C#学习日记/L4_循环结构___2022-10-18_21-01.md
+++ b/C#学习日记/L4_循环结构___2022-10-18_21-01.md
@@ -277,7 +277,7 @@ int main()
     {
         int i;
         int isPrime = 1;
-        for (i = 2; i < x / 2; i++)
+        for (i = 2; i <= x / 2; i++)
         {
             if (x % i == 0)
             {
