总会有补充

--- a/C#学习日记/Js笔记___2022-07-23_11-20.md
+++ b/C#学习日记/Js笔记___2022-07-23_11-20.md
@@ -10,6 +10,8 @@
   - [循环](#循环)
 - [字符串](#字符串)
 - [实/常/有 用的函数](#实常有-用的函数)
+  - [时间戳](#时间戳)
+  - [杂](#杂)
 - [参考来源](#参考来源)
 
 # 数组
@@ -253,9 +255,54 @@
 ```
 
 # 实/常/有 用的函数
+## 时间戳
+> Date.now()  
+> new Date().getTime()  
+> (new Date()).valueOf()  
+> Number(new Date()) 
+- **作用:** 获得当前的时间戳
+- **返回:** 时间戳(数字形式)
+```
+> Date.now()
+< 1666958673590
+> new Date().getTime()
+< 1666958656425
+```
+
+> new Date(time)
+- **作用:** 将时间戳转化为字符串形式
+- **返回:** 标准格式的字符串形式的时间表示
+- **参数:** `time`是数字形式的**时间戳**
+- **注意:** 这里的字符串会按照现在的环境变化, 下面给出两个版本
+```
+> new Date(1666958673590)
+< Fri Oct 28 2022 20:04:33 GMT+0800 (中国标准时间)
+> new Date(1645099205343)  
+< Thu Feb 17 2022 20:00:05 GMT+0800 (CST)
+```
+
+> 生成 'yyyy/MM/dd 上(下)午 hh:mm:ss' 格式
+```
+function getLocalTime(n){
+	return new Date(parseInt(n)).toLocaleString().replace(/:\d{1,2}$/,'');
+}
+getLocalTime(1645099205343) //"2022/2/17 下午8:00"
+```
+
+> 当前系统区域设置格式(toLocaleDateString和toLocaleTimeString)
+```
+(new Date()).toLocaleDateString() + " " + (new Date()).toLocaleTimeString() 
+//'2022/2/18 下午6:51:09'
+```
+
+> 格林威治标准时间(toGMTString)
+```
+(new Date()).toGMTString() 
+//"Fri, 18 Feb 2022 10:53:01 GMT"
+```
+## 杂
 
 > 完全深度复制
-> 要介绍的语法
 - **作用:** 完全的复制一个数组或者对象, 并且两者独立互不影响
 - **返回:** 克隆品
 - **参数:** 要复制的对象, 以及是否是数组
@@ -295,3 +342,4 @@ location.reload();
 # 参考来源
 1. [廖雪峰的官方网站](https://www.liaoxuefeng.com/)
 2. [菜鸟教程](https://www.runoob.com/js/js-tutorial.html)
+3. [在JavaScript中时间戳](https://blog.csdn.net/qq_44741441/article/details/122990466)
