名称删除了具体的时间 只保留了日期

--- a/C#学习日记/Js笔记___2022-07-23_11-20.md
+++ b/C#学习日记/Js笔记___2022-07-23_11-20.md
@@ -11,6 +11,8 @@
 - [字符串](#字符串)
 - [实/常/有 用的函数](#实常有-用的函数)
   - [时间戳](#时间戳)
+  - [JSON](#json)
+  - [cookie](#cookie)
   - [杂](#杂)
 - [参考来源](#参考来源)
 
@@ -105,7 +107,7 @@
 < '1|9|2|4|a|10'
 ```
 
-> arry = array1.concat(array1, array2)
+> arry = array1.concat(array2, array3)
 - **作用:** 将多个数组连接起来
 - **返回:** 组合而成的新数组
 - **参数:** 多个数组对象(按顺序)
@@ -300,6 +302,71 @@ getLocalTime(1645099205343) //"2022/2/17 下午8:00"
 (new Date()).toGMTString() 
 //"Fri, 18 Feb 2022 10:53:01 GMT"
 ```
+
+## JSON
+> JSON.parse("json_string")
+- **作用:** 将一个JSON字符串解析成JavaScript对象
+- **返回:** 一个对象, 可以直接用
+- **参数:** json字符串
+- **备注:** 前后端交互
+```
+> var json_info = '{"a":1,"b":"zhyDaDa","c":null}'
+> var js_obj = JSON.parse(json_info)
+> js_obj
+< {a: 1, b: 'zhyDaDa', c: null}
+```
+
+> JSON.stringify(value, replacer, space)
+- **作用:** 将JavaScript值转换成JSON对象
+- **返回:** 字符串, json的格式
+- **参数:** 
+  + **value**: 一个对象, 可以是数组
+  + **replacer**: 将对象的值传入, 得到的返回值写入json
+  + **space**: 用几个空格缩进
+- **备注:** 前后端交互
+```
+> var js_obj = {a: 1, b: 'zhyDaDa', "c": null}
+> var json_string = JSON.stringify(js_obj)
+> json_string
+< '{"a":1,"b":"zhyDaDa","c":null}'
+```
+
+## cookie
+> 设置cookie  
+- **参数:** iDay是有效天数
+```
+function setCookie(name,value,iDay){
+    var oDate = new Date();
+    oDate.setDate(oDate.getDate() + iDay);
+    document.cookie = name + "=" + value + ";expires=" + oDate;
+}
+```
+
+> 读取cookie  
+- **注意:** 该方法简单地认为cookie中只有一个“=”，即key=value，如有更多需求可以在此基础上完善:
+```
+function getCookie(name){
+    //例如cookie是"username=abc; password=123"
+    var arr = document.cookie.split('; ');//用“;”和空格来划分cookie
+    for(var i = 0 ;i < arr.length ; i++){
+        var arr2 = arr[i].split("=");
+        if(arr2[0] == name){
+            return arr2[1];
+        }
+    }
+    return "";//整个遍历完没找到，就返回空值
+}
+```
+
+> 删除cookie  
+- **备注:** 原理就是覆盖, 然后时间设置成昨天
+```
+function removeCookie(name){
+    setCookie(name, "1", -1)//第二个value值随便设个值，第三个值设为-1表示：昨天就过期了，赶紧删除
+}
+```
+
+
 ## 杂
 
 > 完全深度复制
