--- a/C#学习日记/L1_梦开始的地方_变量___2022-10-07.md
+++ b/C#学习日记/L1_梦开始的地方_变量___2022-10-07.md
@@ -1,5 +1,5 @@
 ---
-title: L1_梦开始的地方_变量___2022-10-07_21-29
+title: L1_梦开始的地方_变量___2022-10-07
 date: 2022-10-07T21:29:50+08:00
 tags:
     - C语言学习笔记
