--- a/C#学习日记/正则表达式学习___2022-08-24_13-42.md
+++ b/C#学习日记/正则表达式学习___2022-08-24_13-42.md
@@ -42,3 +42,14 @@ tags:
 - **注意**: `-` 的左右字符必须在ASCII上是前后关系, 否则无意义  
   另外, `[A-z]` 会掺杂进Z和a之间的其他字符, 不推荐使用
 - **取非匹配**: 元字符 `^` 如果出现在 `[]` 中间的最前面, 那么表示不匹配这个区间内的字符
+
+# 5. "贪婪型"元字符和"懒惰型"元字符
+
++ **贪婪型**: 在*一行内*尽可能**多**的匹配
++ **懒惰型**: 在*一行内*尽可能**少**的匹配  
+
+| 贪婪型  |  懒惰型  |
+| :-----: | :------: |
+|   \*    |   \*?    |
+|   \+    |   \+?    |
+| \{n, \} | \{n, \}? |
